# homework_c

./: .gitignore  CMakeLists.txt
hw01/: CMakeLists.txt  encodings.c  give_me_utf8.c  give_me_utf8.h  rar_jpeg.c
hw02/: CMakeLists.txt
hw02/src/: weather.c
